# api-gateway/api/docs/swagger.json
@@ -8,6 +8,237 @@
     },
     "host": "localhost:8080",
     "paths": {
+        "/v1/order/create": {
+            "post": {
+                "description": "Api for create oder",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Create Order",
+                "parameters": [
+                    {
+                        "description": "Create Order",
+                        "name": "Order",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateOrder"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Order"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.StandartError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.StandartError"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/order/delete/{id}": {
+            "delete": {
+                "description": "Api for delete order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Delete Order",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id Order",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.CheckResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.StandartError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.StandartError"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/order/get/{id}": {
+            "get": {
+                "description": "Api for get order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Get Order",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id Order",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Order"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.StandartError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.StandartError"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/order/update": {
+            "put": {
+                "description": "Api for update order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Update Order",
+                "parameters": [
+                    {
+                        "description": "Update Order",
+                        "name": "Order",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateOrder"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Order"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.StandartError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.StandartError"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/orders/get": {
+            "get": {
+                "description": "Api for get all product",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Get List Order",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Page Order",
+                        "name": "page",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Limit Order",
+                        "name": "limit",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.OrderList"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.StandartError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.StandartError"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/owner/create": {
             "post": {
                 "description": "Api for create owner",
@@ -18,7 +249,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Owner"
+                    "User"
                 ],
                 "summary": "Create Owner",
                 "parameters": [
@@ -64,7 +295,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Owner"
+                    "User"
                 ],
                 "summary": "Delete Owner",
                 "parameters": [
@@ -108,7 +339,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Owner"
+                    "User"
                 ],
                 "summary": "Get Owner",
                 "parameters": [
@@ -152,7 +383,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Owner"
+                    "User"
                 ],
                 "summary": "Update Owner",
                 "parameters": [
@@ -198,7 +429,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Owner"
+                    "User"
                 ],
                 "summary": "Get List Owner",
                 "parameters": [
@@ -221,7 +452,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ProductList"
+                            "$ref": "#/definitions/models.OwnerList"
                         }
                     },
                     "404": {
@@ -480,6 +711,26 @@
                 }
             }
         },
+        "models.CreateOrder": {
+            "type": "object",
+            "properties": {
+                "discount": {
+                    "type": "integer"
+                },
+                "product_id": {
+                    "type": "integer"
+                },
+                "tax": {
+                    "type": "integer"
+                },
+                "total_price": {
+                    "type": "integer"
+                },
+                "worker_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.CreateOwner": {
             "type": "object",
             "properties": {
@@ -506,20 +757,25 @@
         "models.CreateProduct": {
             "type": "object",
             "properties": {
-                "categoryId": {
-                    "type": "integer"
+                "category_id": {
+                    "type": "integer",
+                    "example": 7
                 },
                 "description": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Juda mazzali"
                 },
                 "discount": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 12
                 },
                 "picture": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "http://static/images/myimage.jpg"
                 },
                 "price": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 20000
                 },
                 "title": {
                     "type": "string"
@@ -534,6 +790,43 @@
                 }
             }
         },
+        "models.Order": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "discount": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "product_id": {
+                    "type": "integer"
+                },
+                "tax": {
+                    "type": "integer"
+                },
+                "total_price": {
+                    "type": "integer"
+                },
+                "worker_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.OrderList": {
+            "type": "object",
+            "properties": {
+                "orders": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Order"
+                    }
+                }
+            }
+        },
         "models.Owner": {
             "type": "object",
             "properties": {
@@ -543,7 +836,7 @@
                 "company_name": {
                     "type": "string"
                 },
-                "createdAt": {
+                "created_at": {
                     "type": "string"
                 },
                 "email": {
@@ -561,18 +854,29 @@
                 "tax": {
                     "type": "string"
                 },
-                "updatedAt": {
+                "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "models.OwnerList": {
+            "type": "object",
+            "properties": {
+                "owners": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Owner"
+                    }
                 }
             }
         },
         "models.Product": {
             "type": "object",
             "properties": {
-                "categoryId": {
+                "category_id": {
                     "type": "integer"
                 },
-                "createdAt": {
+                "created_at": {
                     "type": "string"
                 },
                 "description": {
@@ -593,7 +897,7 @@
                 "title": {
                     "type": "string"
                 },
-                "updatedAt": {
+                "updated_at": {
                     "type": "string"
                 }
             }
@@ -614,6 +918,23 @@
             "properties": {
                 "error": {
                     "$ref": "#/definitions/models.Error"
+                }
+            }
+        },
+        "models.UpdateOrder": {
+            "type": "object",
+            "properties": {
+                "discount": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "tax": {
+                    "type": "integer"
+                },
+                "total_price": {
+                    "type": "integer"
                 }
             }
         },
@@ -646,7 +967,7 @@
         "models.UpdateProduct": {
             "type": "object",
             "properties": {
-                "categoryId": {
+                "category_id": {
                     "type": "integer"
                 },
                 "description": {
