# api-gateway/api/models/product.go
@@ -1,15 +1,15 @@
 package models
 
 type Product struct {
-	Id          int64  `json:"id" bulding:"1234"`
+	Id          int64  `json:"id"`
 	Title       string `json:"title"`
 	Description string `json:"description"`
 	Price       int64  `json:"price"`
 	Discount    int64  `json:"discount"`
 	Picture     string `json:"picture"`
-	CategoryId  int64  `json:"categoryId"`
-	CreatedAt   string `json:"createdAt"`
-	UpdatedAt   string `json:"updatedAt"`
+	CategoryId  int64  `json:"category_id"`
+	CreatedAt   string `json:"created_at"`
+	UpdatedAt   string `json:"updated_at"`
 }
 
 type ProductList struct {
@@ -17,14 +17,13 @@ type ProductList struct {
 }
 
 type CreateProduct struct {
-	Title       string `json:"title" description:"Lavash"`
-	Description string `json:"description" description:"Juda mazzali"`
-	Price       int64  `json:"price" description:"20000"`
-	Discount    int64  `json:"discount" description:"12"`
-	Picture     string `json:"picture" description:"http://static/images/myimage.jpg"`
-	CategoryId  int64  `json:"categoryId" description:"7"`
+	Title       string `json:"title" exmaple:"Lavash"`
+	Description string `json:"description" example:"Juda mazzali"`
+	Price       int64  `json:"price" example:"20000"`
+	Discount    int64  `json:"discount" example:"12"`
+	Picture     string `json:"picture" example:"http://static/images/myimage.jpg"`
+	CategoryId  int64  `json:"category_id" example:"7"`
 }
-
 
 type UpdateProduct struct {
 	Id          int64  `json:"id"`
@@ -33,7 +32,7 @@ type UpdateProduct struct {
 	Price       int64  `json:"price"`
 	Discount    int64  `json:"discount"`
 	Picture     string `json:"picture"`
-	CategoryId  int64  `json:"categoryId"`
+	CategoryId  int64  `json:"category_id"`
 }
 
 type CheckResponse struct {
